<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_turtle_package</name>
  <version>0.0.0</version>
  <description>Lab 3: Controlling Turtlebot in specific patterns</description>
  <maintainer email="shahid03157560@gmail.com">bilalsaggu</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>turtlesim</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
